# FastInventory-SaaS

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3e509476aa86_f_33_add_product_variants.py  4bc9046d91ad_f_34_add_tax_engine_fields_to_tenant_.py  51d6ca8b28cd_fase5_products.py  605b14acfe73_f_35_add_branches_branch_product_stock_.py  885ca5a639c1_fase6_sales.py  c5b4b6067166_f_32_y_f_33_add_purchases_and_product_.py  cad8f570edeb_f_32_create_purchases_tables_real.py  de0ed9920a09_fase2_tenants_auth.py  e82abcff53cb_fase8_admin_audit.py  f1f2aaf53343_fase4_categories.py  fbaca70298f9_f_32_add_purchase_orders_and_purchase_.py
app/: main.py
app/core/: cache.py  config.py  database.py  dependencies.py  security.py
architecture/diagrams/: 01_casos_de_uso.drawio  02_componentes.drawio  03_entidad_relacion.drawio  04_actividades_onboarding.drawio
architecture/iterations/: iter-01_modulo-tenants.md  iter-02_modulo-auth.md  iter-03_modulo-users.md  iter-04_modulo-categories.md  iter-05_modulo-products.md  iter-06_modulo-sales.md  iter-07_modulo-reports.md  iter-08_modulo-admin.md
docs/: analisis_transicion_saas.md  drivers_arquitectonicos.md  especificacion_requerimientos.md  requerimientos_usuario.md  vision_y_alcance.md
frontend/: index.html  login.html  package-lock.json  package.json  tailwind.config.js
frontend/css/: style.css
frontend/public/: landing.css  landing.js
frontend/src/: App.jsx  main.jsx  (+1 more)
frontend_legacy/: app.html  dashboard.html  index.html  login.html  package-lock.json
scripts/: create_superadmin.py
tests/: conftest.py  test_auth.py  test_branches.py  test_export.py  test_inventory.py  test_isolation.py  test_plans.py
(+96 files in other folders)
